--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -327,28 +327,32 @@
 		color: $pfont;
 		margin-bottom: 40px;
 	}
-	.basic_info{
-		li{
-			margin-bottom: 15px;
-			a{
-				position: relative;
-				padding-left: 40px;
+	.basic_info {
+		li {
+			margin-bottom: 150px;
+			display: flex; /* Use flexbox to align items */
+			align-items: center; /* Vertically align icon and text */
+			
+			a {
+				display: flex; /* Flexbox layout for icon and text */
+				align-items: center;
 				font-size: 16px;
 				color: $pfont;
-				i{
-					position: absolute;
-					left: 0px;
-					top: 50%;
-					transform: translateY(-50%);
+				text-decoration: none; /* Optional: Removes underline */
+				
+				i {
 					font-size: 20px;
 					color: $baseColor;
+					margin-right: 10px; /* Adds spacing between icon and text */
+					flex-shrink: 0; /* Prevents the icon from shrinking */
 				}
 			}
-			&:last-child{
+	
+			&:last-child {
 				margin-bottom: 0px;
 			}
 		}
-	}
+	}	
 	.personal_social{
 		margin-top: 45px;
 		li{
